--- a/Portfolio/assets/css/style.css
+++ b/Portfolio/assets/css/style.css
@@ -66,6 +66,40 @@ h6 {
   opacity: 1;
 }
 
+.custom-button {
+  background-color: #007BFF;
+  color: white;
+  font-weight: bold;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.custom-button:hover {
+  background-color: #0056b3;
+}
+
+.qr-code {
+  display: block;
+  margin: auto;
+  max-width: 35%;
+  margin-top: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
