Full stack update done

--- a/Portfolio/assets/css/style.css
+++ b/Portfolio/assets/css/style.css
@@ -92,11 +92,21 @@ h6 {
 
 
 
+.custom-button1 {
+  background-color: #0088cc;
+  color: white;
+  font-weight: bold;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
 
-
-
-
-
+.custom-button1:hover {
+  background-color: #0056b3;
+}
 
 
 
